@@ -862,7 +862,8 @@ class Erase(Wizard):
                 ['type', 'code'],
                 [None, '****']),
             (Address, [('party', '=', party_id)], True,
-                ['name', 'street', 'zip', 'city', 'country', 'subdivision'],
+                ['name', 'street', 'postal_code', 'city',
+                    'country', 'subdivision'],
                 [None, None, None, None, None, None]),
             (ContactMechanism, [('party', '=', party_id)], True,
                 ['value', 'name', 'comment'],
