@@ -21,8 +21,8 @@ this repository contains the full copyright notices and license terms. -->
     <label name="street"/>
     <field name="street" colspan="3"/>
     <newline/>
-    <label name="zip"/>
-    <field name="zip"/>
+    <label name="postal_code"/>
+    <field name="postal_code"/>
     <label name="city"/>
     <field name="city"/>
     <newline/>
