@@ -1,3 +1,4 @@
+* Rename zip into postal code
 * Add simple distance between parties
 * Configure available identifiers
 * Add ar, at, by, cn, cr, gr, id, il, kr, lt, no, ro and se identifiers
